Add: added q-learning

--- a/problem.ipynb
+++ b/problem.ipynb
@@ -631,9 +631,9 @@
     "# TODO: test the policy on the environment\n",
     "\n",
     "env = gym.make(\"FrozenLake-v1\", map_name=\"4x4\", is_slippery=False, render_mode='rgb_array')\n",
-    "total_reward = record_video(env, policy, 'frozenlake11_random.mp4', fps=5, random_action=False)\n",
+    "total_reward = record_video(env, policy, 'frozenlake_random.mp4', fps=5, random_action=False)\n",
     "print(f\"total reward: {total_reward}\")\n",
-    "show_video('frozenlake11_random.mp4', video_width=500)"
+    "show_video('frozenlake_random.mp4', video_width=500)"
    ]
   }
  ],
